--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="flex items-center gap-3"><img src="https://i.ibb.co/6RCrrpnj/Design-sans-titre-18.png" alt="مسار" class="w-10 h-10 sm:w-12 sm:h-12 rounded-xl" loading="lazy" onerror="this.style.background='linear-gradient(135deg, #2e7d32, #00796b)'; this.alt='مسار';"> <span class="text-xl sm:text-2xl font-bold gradient-text">مسار</span>
       </div>
       <div class="hidden md:flex items-center gap-8"><a href="#features" class="text-gray-600 transition-colors font-medium" style="--hover-color: #135A5F;" onmouseover="this.style.color='#135A5F'" onmouseout="this.style.color=''">المزايا</a> <a href="#why" class="text-gray-600 transition-colors font-medium" style="--hover-color: #135A5F;" onmouseover="this.style.color='#135A5F'" onmouseout="this.style.color=''">لماذا مسار؟</a> <a href="#how" class="text-gray-600 transition-colors font-medium" style="--hover-color: #135A5F;" onmouseover="this.style.color='#135A5F'" onmouseout="this.style.color=''">كيف يعمل؟</a>
-      </div><a href="#download" class="btn-primary text-white px-4 sm:px-6 py-2 sm:py-2.5 rounded-full text-sm sm:text-base font-semibold"> حمّل الآن </a>
+      </div><a href="https://github.com/massartrip/app/releases/download/v1.0/Massar.App.apk" class="btn-primary text-white px-4 sm:px-6 py-2 sm:py-2.5 rounded-full text-sm sm:text-base font-semibold"> حمّل الآن </a>
      </div>
     </div>
    </nav><!-- Hero Section -->
@@ -92,7 +92,7 @@
        <p id="hero-subtitle" class="text-lg sm:text-xl text-gray-600 mb-8 leading-relaxed max-w-xl mx-auto lg:mx-0">تطبيقك الأمثل لحجز الرحلات البرية الداخلية في الجزائر، مع التتبع المباشر وخدمات ذكية لتجربة سفر آمنة ومريحة</p>
        <div class="flex flex-col sm:flex-row gap-4 justify-center lg:justify-start"><a href="#download" id="cta-button" class="btn-primary text-white px-8 py-4 rounded-full text-lg font-bold inline-flex items-center justify-center gap-3">
          <svg class="w-6 h-6" fill="currentColor" viewbox="0 0 24 24"><path d="M3,20.5V3.5C3,2.91 3.34,2.39 3.84,2.15L13.69,12L3.84,21.85C3.34,21.6 3,21.09 3,20.5M16.81,15.12L6.05,21.34L14.54,12.85L16.81,15.12M20.16,10.81C20.5,11.08 20.75,11.5 20.75,12C20.75,12.5 20.53,12.9 20.18,13.18L17.89,14.5L15.39,12L17.89,9.5L20.16,10.81M6.05,2.66L16.81,8.88L14.54,11.15L6.05,2.66Z" />
-         </svg> حمّل تطبيق مسار الآن </a> <a href="#features" class="border-2 px-8 py-4 rounded-full text-lg font-bold transition-colors inline-flex items-center justify-center gap-2" style="border-color: #135A5F; color: #135A5F;" onmouseover="this.style.backgroundColor='#e0f2f1'" onmouseout="this.style.backgroundColor='transparent'"> اكتشف المزايا 
+         </svg> حمّل تطبيق مسار الآن </a> <a href="https://github.com/massartrip/app/releases/download/v1.0/Massar.App.apk" class="border-2 px-8 py-4 rounded-full text-lg font-bold transition-colors inline-flex items-center justify-center gap-2" style="border-color: #135A5F; color: #135A5F;" onmouseover="this.style.backgroundColor='#e0f2f1'" onmouseout="this.style.backgroundColor='transparent'"> اكتشف المزايا 
          <svg class="w-5 h-5" fill="none" stroke="currentColor" viewbox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
          </svg></a>
        </div>
@@ -486,3 +486,4 @@
  <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9c420956d5d56d96',t:'MTc2OTQ1MTc1NC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 
 </html>
+
